# mind-palace

./: .dockerignore  .gitignore  LOCAL_ENV.dev.template  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  tasks.py
docker/: Dockerfile.build  gunicorn.sh  manage.sh
frontend/: .babelrc  README.md  index.js  package-lock.json  package.json  poi.config.js  webpack.config.js
frontend/src/: site.css  site.js  utils.js
frontend/src/components/: CollectionActions.js  DeleteCollectionButton.js  NewCollectionButton.js  NoteActions.js  NoteButton.css  NoteButton.js  NoteViewer.css  NoteViewer.js  NoteViewerEditButton.css  NoteViewerEditButton.js  Repeater.css  Repeater.js
frontend/src/pages/: NewEditNotePage.js  RepeatPage.css  RepeatPage.js
frontend/src/tests/: test_note_delete_button.js  test_note_editor.js  test_note_viewer.js  test_repeater.js
mind_palace/mind_palace_main/: admin.py  apps.py  tests.py  utils.py
mind_palace/mind_palace_main/business_logic/: collection_cache.py  import_export.py  learn_logic.py  repeat_logic.py  timestamps.py
mind_palace/mind_palace_main/jinja2/: base_external.jinja.html  base_internal.jinja.html  edit_note.jinja.html  home.jinja.html  list_collection.jinja.html  new_note.jinja.html  partial_head.jinja.html  partial_sidebar.jinja.html  repeat.jinja.html  search_results.jinja.html  view_note.jinja.html
mind_palace/mind_palace_main/migrations/: 0001_initial.py
mind_palace/mind_palace_main/models/: __init__.py  attachment_model.py  (+2 more)
mind_palace/mind_palace_site/: settings.py  urls.py  wsgi.py
(+37 files in other folders)
